# lms

./: .dockerignore  .env.example  .env.von  .gitignore  .mcp.json  .prettierignore  .release-it.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  entrypoint.sh  eslint.config.mjs  global.d.ts  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.json
.husky/: pre-commit  pre-push
__tests__/: vitest.setup.ts
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
components/: account-button.tsx  account-dialog.tsx  add-company-dialog.tsx  add-institution-dialog.tsx  add-skill-dialog.tsx  all-time-perlearner-box.tsx  analytics-assistant.tsx  analytics-dashboard.tsx  analytics-header.tsx  analytics-sidebar.tsx  chat-button.tsx  client-layout.tsx  course-access-guard.tsx  course-agent-chat.tsx  course-box.tsx  course-card-skeleton.tsx  course-card.tsx  course-creation-access-guard.tsx  course-lesson-navigator.tsx  course-media-dropdown.tsx  course-outline-drawer.tsx  course-outline.tsx  (+66 more)
src-tauri/: Cargo.toml  build.rs  entitlements.mac.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/offline-shell/: index.html
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs  model_manager.rs  offline_server.rs  ollama_installer.rs  web_cache.rs
(+713 files in other folders)
