[package]
name = "SkillsAI"
version = "0.1.0"
edition = "2021"

[lib]
name = "skills_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
sysinfo = "0.30"
chrono = "0.4"
http = "1.0"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
dotenvy = "0.15"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
mime_guess = "2.0"

[target.'cfg(target_os = "ios")'.dependencies]
objc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
